--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,9 @@
-mock.log.detail=false  #true 打开日志详情
-mock.common.q=1.05
+#true 打开日志详情
+mock.log.detail=true
+
+mock.common.q=0.98
 mock.luckyThree.q=1.1
 mock.hotThree.q=1.1
 mock.pair.q=1.1
 mock.luckyQueue.q=1.1
+mock.times=80
