--- a/bj-client/pom.xml
+++ b/bj-client/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Client</artifactId>
+    <artifactId>bj-client</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
