--- a/bj-server/pom.xml
+++ b/bj-server/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Server</artifactId>
+    <artifactId>bj-server</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
